Fix different element alignments in showcase templates, update reminder submodule

--- a/shared/scss/components/ckan/content.scss
+++ b/shared/scss/components/ckan/content.scss
@@ -45,6 +45,10 @@
           font-family: $font;
         }
       }
+
+      &.context-info {
+        padding: 0;
+      }
     }
 
     .filters {
