--- a/shared/scss/components/ckan/showcase.scss
+++ b/shared/scss/components/ckan/showcase.scss
@@ -1,6 +1,7 @@
 .ckanext-showcase {
   &-image-container {
     background: $gray-lighter;
+    text-align: center;
 
     img {
       max-height: 100%;
